# python_talk_2020

./: README.md  pyproject.toml
src/: 00_sly_tutor.py  01_sly_lexer_w_space.py  02_sly_lexer_wo_space.py  03_sly_parser_explain.py  04_sly_parser_example.py  10_shlex.py  20_iredis.py  30_sly_imp.py  31_sly_step1.py  31_sly_steps.py
