[tool.poetry]
name = "python_talk_2020"
version = "0.1.0"
description = ""
authors = ["ruohan.chen <crhan123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sly = "^0.4"
pytest = "^5.4.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
